--- a/views/prereq.ejs
+++ b/views/prereq.ejs
@@ -84,7 +84,7 @@
       <!-- Nav Item - Round -->
       <li class="nav-item">
         <a class="nav-link" href="round">
-          <span style="font-size: 1.0em;">Round</span></a>
+          <span style="font-size: 1.0em;">Rounds</span></a>
       </li>
 
       <!-- Nav Item - Past Rounds -->
@@ -96,7 +96,7 @@
       <!-- Nav Item - Appeal -->
       <li class="nav-item" >
         <a class="nav-link" href="appeal">
-          <span style="font-size: 1.0em;">Appeal</span></a>
+          <span style="font-size: 1.0em;">Appeals</span></a>
       </li>
 
     </div>
