--- a/views/prereq_child.ejs
+++ b/views/prereq_child.ejs
@@ -84,7 +84,7 @@
       <!-- Nav Item - Round -->
       <li class="nav-item">
         <a class="nav-link" href="../round">
-          <span style="font-size: 1.0em;">Round</span></a>
+          <span style="font-size: 1.0em;">Rounds</span></a>
       </li>
 
       <!-- Nav Item - Past Rounds -->
@@ -96,7 +96,7 @@
       <!-- Nav Item - Appeal -->
       <li class="nav-item" >
         <a class="nav-link" href="../appeal">
-          <span style="font-size: 1.0em;">Appeal</span></a>
+          <span style="font-size: 1.0em;">Appeals</span></a>
       </li>
 
     </div>
@@ -168,19 +168,6 @@
         <button type="submit" class="btn btn-primary"
                 id="btn-prereqs">Submit</button>
       </div>
-    </form>
-  </div>
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary"
-            onclick="window.location.href='../prereq'">Previous</button>
-  </div>
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary"
-            onclick="window.location.href='../dashboard_admin'">Back to Home</button>
-  </div>
-  <div class="form-group">
-    <form action="../logout" role="form" method="post">
-      <button type="submit" class="btn btn-primary">Logout</button>
     </form>
   </div>
 
