--- a/views/round.ejs
+++ b/views/round.ejs
@@ -86,7 +86,7 @@
       <!-- Nav Item - Round -->
       <li class="nav-item">
         <a class="nav-link" href="round">
-          <span style="font-size: 1.0em;">Round</span></a>
+          <span style="font-size: 1.0em;">Rounds</span></a>
       </li>
 
       <!-- Nav Item - Past Rounds -->
