--- a/views/past_rounds.ejs
+++ b/views/past_rounds.ejs
@@ -85,7 +85,7 @@
       <!-- Nav Item - Round -->
       <li class="nav-item">
         <a class="nav-link" href="round">
-          <span style="font-size: 1.0em;">Round</span></a>
+          <span style="font-size: 1.0em;">Rounds</span></a>
       </li>
 
       <!-- Nav Item - Past Rounds -->
@@ -97,7 +97,7 @@
       <!-- Nav Item - Appeal -->
       <li class="nav-item" >
         <a class="nav-link" href="appeal">
-          <span style="font-size: 1.0em;">Appeal</span></a>
+          <span style="font-size: 1.0em;">Appeals</span></a>
       </li>
 
     </div>
