Fixed bugs on username cookies

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -46,7 +46,7 @@
         </a>
 
         <li class="nav-item">
-            <h4 style="color: white;"><%= username %></h4>
+            <h4 style="color: white;"></h4>
         </li>
 
         <!-- Nav Item - Dashboard -->
