--- a/views/prereq_child.ejs
+++ b/views/prereq_child.ejs
@@ -101,14 +101,6 @@
 
     </div>
 
-    <div class="adm-nav-hide1">
-      <!-- Nav Item - register_module -->
-      <li class="nav-item" >
-        <a class="nav-link" href="../register_module">
-          <span style="font-size: 1.0em;">Register Module</span></a>
-      </li>
-    </div>
-
     <li class="nav-item">
       <div class="form-group">
         <form action="../logout" role="form" method="post">
@@ -165,7 +157,7 @@
         </select>
       </div>
       <div>
-        <button type="submit" class="btn btn-primary"
+        <button type="submit" class="btn btn-info"
                 id="btn-prereqs">Submit</button>
       </div>
     </form>
